@@ -197,7 +197,7 @@ else
 
   with_mysql=`dir_resolve "$with_mysql"`
 
-  HEADERS="sql/mysql_priv.h include/my_dir.h include/mysql/plugin.h include/mysql.h include/mysql_version.h"
+  HEADERS="include/my_dir.h include/mysql/plugin.h include/mysql.h include/mysql_version.h"
   for file in $HEADERS; do
     if ! test -r "$with_mysql/$file"; then
       AC_MSG_ERROR([Failed to find required header file $file in $with_mysql, check the path and make sure you've run './configure ..<options>.. && cd include && make' in MySQL sources dir])
@@ -225,6 +225,12 @@ main() {
   ], [
 	AC_MSG_ERROR([MySQL 5.1+ is required])
   ]) 
+
+  dnl check for 5.5 version with missing files and broken method signatures
+  MISSING_HEADER="sql/mysql_priv.h"
+  if ! test -r "$with_mysql/$MISSING_HEADER"; then
+	  AC_DEFINE([MYSQL_VERSION_5_5], [1], [Whether we have MySQL 5.5])
+  fi
 
   CFLAGS="$CFLAGS_old"
 
